ops/op2/test_cases_fail/lifetimes.stderr
error: unused import: `deno_core::error::AnyError`
 --> ../op2/test_cases_fail/lifetimes.rs:4:5
  |
4 | use deno_core::error::AnyError;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> ../op2/test_cases_fail/lifetimes.rs:2:9
  |
2 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unused_imports)]` implied by `#[deny(warnings)]`

error: unused import: `std::future::Future`
 --> ../op2/test_cases_fail/lifetimes.rs:5:5
  |
5 | use std::future::Future;
  |     ^^^^^^^^^^^^^^^^^^^

error[E0521]: borrowed data escapes outside of associated function
 --> ../op2/test_cases_fail/lifetimes.rs:9:1
  |
9 | #[op2(fast)]
  | ^^^^^^^^^^^^
  | |
  | `arg0` is a reference that is only valid in the associated function body
  | `arg0` escapes the associated function body here
  | has type `Local<'1, deno_core::v8::Value>`
  | argument requires that `'1` must outlive `'static`
  |
  = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0521]: borrowed data escapes outside of associated function
 --> ../op2/test_cases_fail/lifetimes.rs:9:1
  |
9 | #[op2(fast)]
  | ^^^^^^^^^^^^
  | |
  | `info` is a reference that is only valid in the associated function body
  | `info` escapes the associated function body here
  | lifetime `'s` defined here
  | argument requires that `'s` must outlive `'static`
  |
  = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `arg0_temp` does not live long enough
  --> ../op2/test_cases_fail/lifetimes.rs:12:1
   |
12 | #[op2(fast)]
   | ^^^^^^^^^^^-
   | |          |
   | |          `arg0_temp` dropped here while still borrowed
   | borrowed value does not live long enough
   | argument requires that `arg0_temp` is borrowed for `'static`
   |
   = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)
